# kble

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  renovate.json
.cargo/: config.toml
.github/workflows/: actionlint.yml  release.yml  rust.yml  verify-crate.yaml
kble/: Cargo.toml  Dockerfile  build.rs  spaghetti.yaml
kble-c2a/: Cargo.toml  build.rs
kble-c2a/src/: lib.rs  main.rs  spacepacket.rs  tfsync.rs
kble-c2a/tests/: e2e.rs
kble-dump/: Cargo.toml  README.md
kble-dump/src/: main.rs
kble-dump/tests/: e2e.rs
kble-eb90/: Cargo.toml  about.toml  build.rs  license.rs
kble-eb90/src/: license.rs  main.rs
kble-eb90/tests/: e2e.rs
kble-lossy/: Cargo.toml
kble-lossy/src/: main.rs
kble-serialport/: Cargo.toml  about.toml
kble-serialport/src/: main.rs
kble-serialport/tests/: e2e.rs
kble-socket/: Cargo.toml
kble-socket/src/: axum.rs  axum_08.rs  lib.rs  stdio.rs  tungstenite.rs
kble-socket/tests/: adapters.rs
kble-tcp/: Cargo.toml  build.rs
kble-tcp/src/: main.rs
kble-tcp/tests/: e2e.rs
kble-test-support/: Cargo.toml
kble-test-support/src/: lib.rs
kble-tfsync/: Cargo.toml
kble-tfsync/.cargo/: config.toml
kble-tfsync/src/: lib.rs  main.rs
kble/src/: app.rs  main.rs  plug.rs  spaghetti.rs
kble/tests/: e2e.rs
scripts/: verify-release-binary.sh
