[workspace.package]
version = "0.5.0"
description = "Virtual Harness Toolkit"
repository = "https://github.com/arkedge/kble"
license = "MIT"
edition = "2021"
rust-version = "1.88"
readme = "README.md"

[workspace]
resolver = "2"

members = [
  "kble",
  "kble-serialport",
  "kble-socket",
  "kble-c2a",
  "kble-eb90",
  "kble-tcp",
  "kble-dump",
  "kble-test-support",
]

[workspace.dependencies]
anyhow = "1"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
pin-project-lite = { version = "0.2" }
bytes = "1.5.0"
tokio = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = { version = "0.20" }
axum = { version = "0.8", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kble-socket = "0.5"
# Capped below 1.7: proptest 1.7+ pulls rand 0.9/getrandom 0.3, which raise the
# MSRV above this workspace's pinned toolchain (see rust-toolchain). Default
# features (fork/timeout) are dropped to avoid the tempfile -> wit-bindgen path,
# which the pinned toolchain's Cargo cannot parse.
proptest = { version = ">=1.5, <1.12", default-features = false, features = ["std", "bit-set"] }
notalawyer = "0.3"
notalawyer-clap = "0.3"
# notalawyer-build 0.3 calls cargo-about as a library (not as a subprocess), so
# no cargo-about binary needs to be on PATH at build time. default-features are
# dropped to disable `fetch-clarify-license` (ureq + rustls): none of our
# about.toml files use `[clarify.<crate>.git]`, so we never fetch remote license
# data and the build stays fully offline.
notalawyer-build = { version = "0.3", default-features = false }
