[package]
name = "kble-c2a"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Virtual Harness Toolkit"
repository = "https://github.com/arkedge/kble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
kble-socket = { version = "0.1.0", features = ["stdio", "tungstenite"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
