[package]
name = "kble-c2a"
description = "Virtual Harness Toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["stdio", "tungstenite"] }
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
