[package]
name = "kble-dump"
description = "Virtual Harness Toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
notalawyer-build.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["stdio", "tungstenite"] }
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
notalawyer.workspace = true
notalawyer-clap.workspace = true
rmp-serde = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
miniz_oxide = "0.7.3"
serde = { workspace = true, features = ["derive"] }
