[package]
name = "kble-eb90"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Virtual Harness Toolkit"
repository = "https://github.com/arkedge/kble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["stdio", "tungstenite"] }
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
eb90 = "0.1.1"
