[package]
name = "kble-eb90"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
notalawyer-build.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["stdio", "tungstenite"] }
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
eb90 = "0.1.1"
notalawyer.workspace = true
notalawyer-clap.workspace = true
