[package]
name = "kble-serialport"
description = "Virtual Harness Toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["axum"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { workspace = true, default-features = false, features = ["tokio", "tower-log", "http1", "ws", "query"] }
tokio-serial = "5.4"
serde.workspace = true
bytes.workspace = true
