[package]
name = "kble-serialport"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
notalawyer-build.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["axum-08"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum-08 = { workspace = true, default-features = false, features = ["tokio", "tower-log", "http1", "ws", "query"] }
tokio-serial = "5.4"
serde.workspace = true
bytes.workspace = true
notalawyer.workspace = true
notalawyer-clap.workspace = true
