[package]
name = "kble-serialport"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
notalawyer-build.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
kble-socket = { workspace = true, features = ["axum"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { workspace = true, default-features = false, features = ["tokio", "tower-log", "http1", "ws", "query"] }
tokio-serial = "5.4"
serde.workspace = true
bytes.workspace = true
notalawyer.workspace = true
notalawyer-clap.workspace = true

[dev-dependencies]
# A pty pair stands in for a real serial device in the E2E tests.
# `default-features = false` drops the libudev port-enumeration backend, which
# the tests don't use (they open the pty by path) and which would otherwise
# require libudev-dev on the build host.
serialport = { version = "4", default-features = false }
# A real WebSocket client to drive the axum server end to end.
tokio-tungstenite = { workspace = true }
