[package]
name = "kble-socket"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
pin-project-lite = { workspace = true, optional = true }
tokio.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
axum.workspace = true
bytes.workspace = true

[features]
stdio = ["tokio/io-std", "dep:pin-project-lite"]
tungstenite = ["dep:tokio-tungstenite"]
axum = ["axum/ws"]
