[package]
name = "kble-tcp"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
notalawyer.workspace = true
notalawyer-clap.workspace = true

[build-dependencies]
notalawyer-build.workspace = true