[package]
name = "kble-tfsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
kble-socket = { path = "../kble-socket", features = ["stdio", "tungstenite"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
