[package]
name = "kble"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Virtual Harness Toolkit"
repository = "https://github.com/arkedge/kble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
pin-project = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
tokio-tungstenite = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.9"
serde_with = "2.3"
