[package]
name = "kble"
description = "Virtual Harness Toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
notalawyer-build.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
pin-project = "1"
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
tokio-tungstenite.workspace = true
clap.workspace = true
serde.workspace = true
serde_yaml = "0.9"
serde_with = "3.7"
tracing-subscriber.workspace = true
tracing.workspace = true
notalawyer.workspace = true
notalawyer-clap.workspace = true
